[package]
name = "lowkey"
version = "0.1.0"
edition = "2021"
authors = ["Remo Senekowitsch <remo@buenzli.dev>"]
description = "A delightful, local-first CI system."
readme = "README.md"
repository = "https://github.com/senekor/lowkey"
license = "Unlicense"
categories = ["command-line-utilities", "development-tools::testing"]
keywords = ["continuous", "integration"]

# don't publish unnecessary files to crates.io
exclude = [".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
